@@ -1,3 +1,7 @@
+2010-04-14  Roland McGrath  <roland@redhat.com>
+
+	* readelf.c (handle_core_item): Fix bitmask printing.
+
 2010-04-06  Roland McGrath  <roland@redhat.com>
 
 	* ld.c (options): Fix some typos in messages.
